VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc22Down.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [16MB/2.258GB][  0%][>                                                 ][5.333MB/s]  [72MB/2.258GB][  3%][=>                                                ][18MB/s]  [136MB/2.258GB][  5%][==>                                               ][27.2MB/s]  [200MB/2.258GB][  8%][====>                                             ][33.33MB/s]  [248MB/2.258GB][ 10%][=====>                                            ][35.43MB/s]  [288MB/2.258GB][ 12%][======>                                           ][36MB/s]  [328MB/2.258GB][ 14%][=======>                                          ][36.44MB/s]  [368MB/2.258GB][ 15%][=======>                                          ][36.8MB/s]  [408MB/2.258GB][ 17%][========>                                         ][37.09MB/s]  [448MB/2.258GB][ 19%][=========>                                        ][37.33MB/s]  [488MB/2.258GB][ 21%][==========>                                       ][37.54MB/s]  [528MB/2.258GB][ 22%][===========>                                      ][37.71MB/s]  [560MB/2.258GB][ 24%][============>                                     ][37.33MB/s]  [600MB/2.258GB][ 25%][============>                                     ][37.5MB/s]  [640MB/2.258GB][ 27%][=============>                                    ][37.65MB/s]  [680MB/2.258GB][ 29%][==============>                                   ][37.78MB/s]  [720MB/2.258GB][ 31%][===============>                                  ][37.89MB/s]  [768MB/2.258GB][ 33%][================>                                 ][38.4MB/s]  [808MB/2.258GB][ 34%][=================>                                ][38.48MB/s]  [856MB/2.258GB][ 37%][==================>                               ][38.91MB/s]  [904MB/2.258GB][ 39%][===================>                              ][39.3MB/s]  [944MB/2.258GB][ 40%][====================>                             ][39.33MB/s]  [984MB/2.258GB][ 42%][=====================>                            ][39.36MB/s]  [1024MB/2.258GB][ 44%][======================>                           ][39.38MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][39.41MB/s]  [1.078GB/2.258GB][ 47%][=======================>                          ][39.43MB/s]  [1.117GB/2.258GB][ 49%][========================>                         ][39.45MB/s]  [1.156GB/2.258GB][ 51%][=========================>                        ][39.47MB/s]  [1.195GB/2.258GB][ 52%][==========================>                       ][39.48MB/s]  [1.234GB/2.258GB][ 54%][===========================>                      ][39.5MB/s]  [1.273GB/2.258GB][ 56%][============================>                     ][39.52MB/s]  [1.312GB/2.258GB][ 58%][=============================>                    ][39.53MB/s]  [1.344GB/2.258GB][ 59%][=============================>                    ][39.31MB/s]  [1.383GB/2.258GB][ 61%][==============================>                   ][39.33MB/s]  [1.422GB/2.258GB][ 62%][===============================>                  ][39.35MB/s]  [1.461GB/2.258GB][ 64%][================================>                 ][39.37MB/s]  [1.5GB/2.258GB][ 66%][=================================>                ][39.38MB/s]  [1.539GB/2.258GB][ 68%][==================================>               ][39.4MB/s]  [1.578GB/2.258GB][ 69%][==================================>               ][39.41MB/s]  [1.617GB/2.258GB][ 71%][===================================>              ][39.43MB/s]  [1.656GB/2.258GB][ 73%][====================================>             ][39.44MB/s]  [1.695GB/2.258GB][ 75%][=====================================>            ][39.45MB/s]  [1.734GB/2.258GB][ 76%][======================================>           ][39.47MB/s]  [1.781GB/2.258GB][ 78%][=======================================>          ][39.65MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][39.66MB/s]  [1.867GB/2.258GB][ 82%][=========================================>        ][39.83MB/s]  [1.906GB/2.258GB][ 84%][==========================================>       ][39.84MB/s]  [1.945GB/2.258GB][ 86%][===========================================>      ][39.84MB/s]  [1.977GB/2.258GB][ 87%][===========================================>      ][39.69MB/s]  [2.023GB/2.258GB][ 89%][============================================>     ][39.85MB/s]  [2.07GB/2.258GB][ 91%][=============================================>    ][40MB/s]  [2.117GB/2.258GB][ 93%][==============================================>   ][40.15MB/s]  [2.156GB/2.258GB][ 95%][===============================================>  ][40.15MB/s]  [2.203GB/2.258GB][ 97%][================================================> ][40.29MB/s]  [2.242GB/2.258GB][ 99%][=================================================>][40.28MB/s]  [2.258GB/2.258GB][100%][==================================================][40.57MB/s]  [2.258GB/2.258GB][100%][==================================================][40.57MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_45723/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_45723/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
